compiler/test-data/parser/errors/expressions/unclosed_list.frel
module test

backend Bad {
    items : List<i32> = [1, 2, 3
}
